--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "lint-staged": "^13.0.3"
   },
   "dependencies": {
+    "ipfs": "^0.66.1",
+    "ipfs-http-client": "^60.0.1",
     "styled-components": "^6.1.8"
   }
 }
