--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "lint-staged": "^13.0.3"
   },
   "dependencies": {
+    "ethers": "^6.11.1",
     "ipfs": "^0.66.1",
     "ipfs-http-client": "^60.0.1",
+    "node-fetch": "^3.3.2",
     "styled-components": "^6.1.8"
   }
 }
